--- a/about.html
+++ b/about.html
@@ -86,6 +86,15 @@ ul li {
     margin-bottom: 15px;
 }
 
+.footer {
+    text-align: center;
+    padding: 20px 0;
+    background-color: #0077B6; /* Primary Color */
+    color: #ffffff; /* White */
+    bottom: 0;
+    width: 100%;
+}
+
     </style>
 </head>
 <body>
@@ -97,7 +106,7 @@ ul li {
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
               <a class="nav-link active" aria-current="page" href="#">What is Erasmus?</a>
               <a class="nav-link" href="experience.html">Our Experience</a>
               <a class="nav-link" href="reviews.html">Reviews</a>
