--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@ ul li {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
 }
 
+.footer {
+  text-align: center;
+  padding: 20px 0;
+  background-color: #0077B6; /* Primary Color */
+  color: #ffffff; /* White */
+  bottom: 0;
+  width: 100%;
+}
+
     </style>
 </head>
 <body>
@@ -125,7 +134,7 @@ ul li {
 
       <footer class="footer">
         <div class="container">
-          <p>&copy; 2024 Cortojan&Pătrașcu. All Rights Reserved. </p>
+          <p>&copy; 2024 Cortojan&Pătrașcu. All Rights Reserved.</p>
         </div>
       </footer>
 </body>
