--- a/reviews.html
+++ b/reviews.html
@@ -70,6 +70,15 @@
             font-style: italic;
             color: #666666;
         }
+
+        .footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #0077B6; /* Primary Color */
+            color: #ffffff; /* White */
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -81,7 +90,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
               <a class="nav-link" href="about.html">What is Erasmus?</a>
               <a class="nav-link" href="experience.html">Our experience</a>
               <a class="nav-link active" aria-current="page" href="#">Reviews</a>
@@ -137,7 +146,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2024 Cortojan&Pătrașcu. All Rights Reserved. </p>
+        <p>&copy; 2024 Cortojan&Pătrașcu. All Rights Reserved.</p>
     </footer>
 
 </body>
