--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-8pU+a0A+yYqvyXpBckcZE3lRKBdHfWz6Nv08kCpqXdL+g2hFTRW93ZI4Kb7K+xT" crossorigin="anonymous"></script>
     <title>Our Experience</title>
     <style>
         /* Reset and General Styles */
@@ -116,6 +117,8 @@ p {
             <img src="/static/photos/e5.jpg" alt="Erasmus Project Photo 5">
             <img src="/static/photos/e6.jpg" alt="Erasmus Project Photo 6">
             <!-- Add more photos as needed -->
+
+            <a href="reviews.html" class="btn btn-primary">See reviews from our peers</a>
         </div>
     </div>
 
