--- a/reviews.html
+++ b/reviews.html
@@ -114,8 +114,8 @@
                 <p class="class">Class: X M.I</p>
             </div>
             <div class="review-card">
-                <p>[15:29, 27/06/2024] Mihai Patrascu: In cadrul proiectului Erasmus, am avut privilegiul de a experimenta o oportunitate unicã de invatare si crestere personal. Acest proiect m-a ajutat sã-mi extind orizonturile cunasteri, sã devin mai
-                    [15:29, 27/06/2024] Mihai Patrascu: responsabil si mai independent. Am avut sansa de a explosa, are in sinival presum. Canada, idalar:
+                <p> In cadrul proiectului Erasmus, am avut privilegiul de a experimenta o oportunitate unicã de invatare si crestere personal. Acest proiect m-a ajutat sã-mi extind orizonturile cunasteri, sã devin mai
+                    responsabil si mai independent. Am avut sansa de a explosa, are in sinival presum. Canada, idalar:
                     am participat la un eveniment cultural traditional, seara de flamenco. Aceste experiente au deschis perspective noi asupra lumii si mi-au oferit o intelegere mai profundã a diversitatii umane. Constienteizez că am avut marea oportunitatate de a mã dezvolta pe plan profesional, deoarece amînvtat noi limbaje de programare, precum
                     Java Script, HTML, CSS, care mi vor fi de folos in cariera profesional. Recomand implicarea intr-un astfel de proiect educational</p>
                 <p class="name">Pătrașcu Mihai</p>
