edited Photo Gallery description

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ ul li {
         <ul class="feature-list">
           <li>About Erasmus: Learn about the Erasmus program, its history, and how it fosters international cooperation and learning.</li>
           <li>Project Details: Discover the specifics of the project I participated in, including our goals, activities, and the impact we made.</li>
-          <li>Photo Gallery: Browse through a collection of photos capturing the essence of our time in Spain, from scenic landscapes to daily activities.</li>
+          <li>Photo Gallery: See a collection of photos capturing the essence of our time in Spain.</li>
           <li>Peer Reviews: Read reviews from my fellow participants, highlighting their unique experiences and takeaways.</li>
         </ul>
         <p>Whether you're a student considering an Erasmus exchange, an educator looking for inspiration, or simply curious about international programs, I hope this site provides valuable insights and encourages you to embark on your own Erasmus adventure.</p>
