--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ ul li {
       <div class="container">
         <img src="static/photos/despre-erasmus.png" class="hero-img">
         <h2>Welcome to Our Erasmus Experience</h2>
-        <p class="lead">Embarking on an Erasmus journey is more than just an academic exchange—it's a life-changing adventure filled with cultural exploration, personal growth, and unforgettable memories. This website is dedicated to sharing my experience from my recent Erasmus project in Spain, offering insights, stories, and tips for future participants.</p>
+        <p class="lead">Embarking on an Erasmus journey is more than just an academic exchange—it's a life-changing adventure filled with cultural exploration, personal growth, and unforgettable memories. This website is dedicated to sharing our experience from my recent Erasmus project in Spain, offering insights, stories, and tips for future participants.</p>
         <h3 class="section-title">What You'll Find Here</h3>
         <ul class="feature-list">
           <li>About Erasmus: Learn about the Erasmus program, its history, and how it fosters international cooperation and learning.</li>
