--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {
   color: #005f8b; /* Darker Cyan */
 }
 
+
 /* Heading Styles */
 h2, h3 {
   color: #0077B6; /* Primary Color */
@@ -123,12 +124,12 @@ ul li {
       <div class="container">
         <img src="static/photos/despre-erasmus.png" class="hero-img">
         <h2>Welcome to Our Erasmus Experience</h2>
-        <p class="lead">Embarking on an Erasmus journey is more than just an academic exchange—it's a life-changing adventure filled with cultural exploration, personal growth, and unforgettable memories. This website is dedicated to sharing my experience from my recent Erasmus project in Spain, offering insights, stories, and tips for future participants.</p>
+        <p class="lead">Embarking on an Erasmus journey is more than just an academic exchange—it's a life-changing adventure filled with cultural exploration, personal growth, and unforgettable memories. This website is dedicated to sharing our experience from my recent Erasmus project in Spain, offering insights, stories, and tips for future participants.</p>
         <h3 class="section-title">What You'll Find Here</h3>
         <ul class="feature-list">
           <li>About Erasmus: Learn about the Erasmus program, its history, and how it fosters international cooperation and learning.</li>
           <li>Project Details: Discover the specifics of the project I participated in, including our goals, activities, and the impact we made.</li>
-          <li>Photo Gallery: Browse through a collection of photos capturing the essence of our time in Spain, from scenic landscapes to daily activities.</li>
+          <li>Photo Gallery: See a collection of photos capturing the essence of our time in Spain.</li>
           <li>Peer Reviews: Read reviews from my fellow participants, highlighting their unique experiences and takeaways.</li>
         </ul>
         <p>Whether you're a student considering an Erasmus exchange, an educator looking for inspiration, or simply curious about international programs, I hope this site provides valuable insights and encourages you to embark on your own Erasmus adventure.</p>
